v1.14.0 - updated jquery-1.10.2.min.js - updated jquery-migrate-1.2.1.min.js - bug fix for credit covers - updated CSS - added tabbed configuration

--- a/catalog/includes/templates/YOUR_TEMPLATE/css/no_account.css
+++ b/catalog/includes/templates/YOUR_TEMPLATE/css/no_account.css
@@ -32,3 +32,5 @@
 	padding: 0
 }
 
+
+.fec-easy-sing-up .fec-col-left {width: 100% !important;}
